syntax = "proto3";
package service;

option go_package = "protocols/resume";

import "resume-models.proto";

// ResumeService is
service ResumeService {
    rpc CreateResume(models.Resume) returns(ResumeDbEmpty);
    rpc GetResumes(ResumeDbEmpty) returns(models.Resumes);
    rpc GetResumeByUUID(ResumeReq) returns(models.Resume);
}

message ResumeReq{
    bytes       resume_uuid        = 1;
}
message ResumeDbEmpty {}

